# Aframpwallet

./: .gitignore  .merchant_seed  Cargo.toml  TEMPLATE_IMPLEMENTATION.md  test_e2e.sh
circuits/: Cargo.toml
circuits/src/: lib.rs  serialization.rs
cli/: Cargo.toml
cli/src/: main.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
merchant-api/: Cargo.toml
merchant-api/src/: main.rs
merchant-dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml
merchant-dashboard/src/: App.tsx  index.css
merchant-dashboard/src/components/: AppLayout.tsx  Footer.tsx  Layout.tsx  Navbar.tsx  StatsCard.tsx
merchant-dashboard/src/pages/: About.tsx  Compliance.tsx  Dashboard.tsx  Developers.tsx  Features.tsx  Home.tsx  Landing.tsx  Onboarding.tsx  PaymentDemo.tsx  Reports.tsx  Settings.tsx  Transactions.tsx
merchant-dashboard/src/services/: api.ts
merchant-dashboard/src/templates/: EXAMPLE_PageImplementation.tsx  PageTemplate.tsx  README.md
merchant-dashboard/src/types/: index.ts
merchant-dashboard/src/utils/: format.ts
pos-client/: Cargo.toml
pos-client/src/: main.rs
privacy-circuits/: Cargo.toml
privacy-circuits/src/: lib.rs
privacy-cli/: Cargo.toml
privacy-cli/src/: main.rs
privacy-contract/: Cargo.toml
privacy-contract/src/: lib.rs
privacy-contract/test_snapshots/test/: test_nullifier_rejects_double_spend.1.json  test_process_payment_full_flow.1.json
privacy-utils/: Cargo.toml
wallet-core/: Cargo.toml
wallet-core/src/: lib.rs
wallet-server/: Cargo.toml
wallet-server/src/: main.rs
wallet-wasm/src/: lib.rs
