[workspace]
resolver = "3"
members = ["contracts", "circuits", "wallet-core", "wallet-wasm", "wallet-server", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
soroban-sdk = "21.0.0"
ark-bn254 = { version = "0.5", features = ["r1cs"] }
ark-ed-on-bn254 = { version = "0.5", features = ["r1cs"] }
ark-groth16 = "0.5"
ark-serialize = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
wasm-bindgen = "0.2"
rand = "0.8"
hex = "0.4"
blake3 = "1.5"
serde = { version = "1", features = ["derive"] }
