[workspace]
members = [
    "privacy-circuits",
    "privacy-contract",
    "privacy-utils",
    "privacy-cli",
    "merchant-api",
    "pos-client",
]
resolver = "2"

[workspace.dependencies]
# ZK Cryptography
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"

# Stellar
soroban-sdk = "27.0.0-rc.1"
stellar-strkey = "0.0.9"

# Web
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
rand = "0.8"
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
