[package]
name = "circuits"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
ark-bn254 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-snark = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
