[package]
name = "merchant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
ark-bn254 = { workspace = true }
ark-ff = "0.4"
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
num-bigint = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
privacy-circuits = { path = "../privacy-circuits" }
