[package]
name = "wallet-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
circuits = { path = "../circuits" }
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
