[package]
name = "wallet-server"
version.workspace = true
edition.workspace = true

[dependencies]
wallet-core = { path = "../wallet-core" }
circuits = { path = "../circuits" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
hex = { workspace = true }
ark-ff = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
